--- a/crates/sequencer/Cargo.toml
+++ b/crates/sequencer/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 zkclear-types = { path = "../types" }
 zkclear-state = { path = "../state" }
 zkclear-stf = { path = "../stf" }
+k256 = { version = "0.13", features = ["ecdsa"] }
+sha3 = "0.10"
 
