--- a/crates/sequencer/Cargo.toml
+++ b/crates/sequencer/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 zkclear-types = { path = "../types" }
 zkclear-state = { path = "../state" }
 zkclear-stf = { path = "../stf" }
+zkclear-storage = { path = "../storage" }
 k256 = { version = "0.13", features = ["ecdsa"] }
 sha3 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
