--- a/crates/sequencer/Cargo.toml
+++ b/crates/sequencer/Cargo.toml
@@ -8,7 +8,11 @@ zkclear-types = { path = "../types" }
 zkclear-state = { path = "../state" }
 zkclear-stf = { path = "../stf" }
 zkclear-storage = { path = "../storage" }
+zkclear-prover = { path = "../prover" }
 k256 = { version = "0.13", features = ["ecdsa"] }
+sha2 = "0.10"
 sha3 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
+tokio = { version = "1.0", features = ["rt", "sync"] }
 
