--- a/crates/sequencer/Cargo.toml
+++ b/crates/sequencer/Cargo.toml
@@ -15,4 +15,5 @@ sha3 = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
 tokio = { version = "1.0", features = ["rt", "sync"] }
+futures = "0.3"
 
